--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@lottiefiles/dotlottie-react": "^0.14.1",
     "@react-three/drei": "^10.2.0",
     "@react-three/fiber": "^9.1.2",
+    "@supabase/supabase-js": "^2.50.2",
     "axios": "^1.10.0",
     "face-api.js": "^0.22.2",
     "next": "15.3.3",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-youtube": "^10.1.0",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
