--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@supabase/supabase-js": "^2.50.2",
     "axios": "^1.10.0",
     "face-api.js": "^0.22.2",
+    "lucide-react": "^0.525.0",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-player": "^2.16.0",
     "react-youtube": "^10.1.0",
+    "recharts": "^3.0.2",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
