--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@supabase/supabase-js": "^2.50.2",
     "axios": "^1.10.0",
     "face-api.js": "^0.22.2",
+    "framer-motion": "^12.19.2",
     "lucide-react": "^0.525.0",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
